# emacs-ai-api

./: .gitignore  CLAUDE.md  README.md
docs/: ai_agent_instructions.md  dual-license.md  emacs-quick-reference.md  gptel-quickref.md  learnings.md  litellm-operations.md  litellm.md  local-setup-guide.md  mcp-eliza.md  mcp-emacs-self-documentation.md  mcp-org-table.md  methodology.md  playwright.md  rust-cli-tools-wip.md
emacs-mcp-server/: .gitignore  Cargo.toml  README.md  example.sh
emacs-mcp-server/examples/: README.md  code-review.sh  demo-code.rs  generate-docs.sh  use-cases.org
emacs-mcp-server/examples/log-analyzer/: flask-app.py
emacs-mcp-server/examples/log-analyzer/templates/: index.html
emacs-mcp-server/examples/pair-program/: flask-app.py
emacs-mcp-server/examples/pair-program/templates/: index.html
emacs-mcp-server/src/: emacs.rs  main.rs  mcp.rs  tools.rs
llm-gateway/: .env.example  .gitignore  check-usage.sh  docker-compose.yml  restart-litellm.sh  test-ollama-usage.sh  test-openai-batch.sh  test-unified.sh
rust-wip/: Cargo.toml
rust-wip/migrations/: 001_initial.sql
rust-wip/src/: client.rs  config.rs  database.rs  lib.rs  models.rs
scripts/: build-rust.sh  gen-virtual-key.sh  health.sh  llm-history.sh  probe.sh  show-budget.sh  show-recent-usage.sh  start-litellm-local.sh  test-all.sh  test-anthropic.sh  test-big72-simple.sh  test-deepseek.sh  test-emacs-big72-v2.sh  test-emacs-big72.sh  test-emacs-localhost.sh  test-gemini.sh  test-gptel-setup.sh  test-llamacpp.sh  test-ollama.sh  test-openai.sh  validate_elisp.sh  (+1 more)
(+41 files in other folders)
