[package]
name = "llm-tools"
version = "0.1.0"
edition = "2021"
authors = ["Mike <mike@softwarewrighter.com>"]
description = "CLI tools for managing LLM API usage, costs, and configuration"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI interface
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment and config
dotenv = "0.15"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "llm-status"
path = "src/bin/status.rs"
